--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "concurrently \"npm:vite:dev\" \"npm:slicemachine\" --prefix-colors blue,magenta",
+		"vite:dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"slicemachine": "start-slicemachine"
 	},
 	"devDependencies": {
 		"@iconify-json/carbon": "^1.1.21",
 		"@riadh-adrani/utils": "0.42.2",
-		"@sveltejs/adapter-auto": "2.1.0",
+		"@slicemachine/adapter-sveltekit": "^0.3.24",
+		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-static": "2.0.3",
-		"@sveltejs/kit": "1.25.0",
+		"@sveltejs/kit": "^1.27.1",
 		"@types/dompurify": "^3.0.2",
 		"@types/marked": "^5.0.0",
 		"@types/prismjs": "^1.26.0",
@@ -26,17 +29,20 @@
 		"@unocss/extractor-svelte": "^0.56.1",
 		"@unocss/preset-icons": "^0.56.1",
 		"@unocss/svelte-scoped": "^0.56.1",
+		"concurrently": "^8.2.2",
 		"dompurify": "^3.0.5",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"eslint": "^8.52.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.34.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"marked": "^5.1.1",
 		"marked-gfm-heading-id": "^3.0.4",
 		"marked-mangle": "^1.1.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
 		"prismjs": "^1.29.0",
 		"sass": "^1.57.1",
+		"slice-machine-ui": "^1.19.2",
 		"slugify": "^1.6.6",
 		"svelte": "4.2.1",
 		"svelte-check": "3.5.2",
@@ -47,6 +53,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prismicio/client": "^7.3.1",
+		"@prismicio/svelte": "^1.0.2",
+		"@splidejs/svelte-splide": "^0.2.9",
 		"dayjs": "^1.11.10"
 	}
 }
