--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
 		"@prismicio/client": "^7.3.1",
 		"@prismicio/svelte": "^1.0.2",
 		"@splidejs/svelte-splide": "^0.2.9",
+		"@threlte/core": "^6.1.1",
 		"dayjs": "^1.11.10",
+		"sveltronics": "^0.0.13",
 		"three": "^0.158.0",
 		"three-buffer-geometry-utils": "^1.0.0"
 	}
