--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"@splidejs/svelte-splide": "^0.2.9",
 		"@threlte/core": "^6.1.1",
 		"dayjs": "^1.11.10",
+		"saos": "^1.3.1",
 		"svelte-device-info": "^1.0.0",
 		"sveltronics": "^0.0.13",
 		"three": "^0.158.0",
