--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
 		"@prismicio/client": "^7.3.1",
 		"@prismicio/svelte": "^1.0.2",
 		"@splidejs/svelte-splide": "^0.2.9",
-		"@threlte/core": "^6.1.1",
+		"@threlte/core": "^7.0.6",
+		"@threlte/extras": "^8.0.8",
+		"@types/three": "^0.159.0",
 		"dayjs": "^1.11.10",
 		"saos": "^1.3.1",
 		"svelte-device-info": "^1.0.0",
 		"sveltronics": "^0.0.13",
-		"three": "^0.158.0",
+		"three": "^0.159.0",
 		"three-buffer-geometry-utils": "^1.0.0"
 	}
 }
