--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,13 +15,12 @@ jobs:
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
-          yarn install --immutable --immutable-cache --check-cache
+          yarn 
           yarn build
-          touch build/.nojekyll
-          cp build/404.html build/index.html
+          touch out/.nojekyll
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
         with:
-          folder: build # The folder the action should deploy.
+          folder: out # The folder the action should deploy.
           branch: gh-pages
