update action for export

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,11 @@ jobs:
         run: |
           yarn 
           yarn build
-          touch /out/.nojekyll
+          yarn export
+          touch ./out/.nojekyll
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
         with:
-          folder: /out # The folder the action should deploy.
+          folder: ./out # The folder the action should deploy.
           branch: gh-pages
