--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-top-loading-bar": "^2.3.1",
+    "react-video-pop": "^1.0.3",
     "three": "^0.159.0",
     "typescript": "^5.2.2",
     "usehooks-ts": "^2.9.1"
