last chance before christmas. tone js is done. event bus is still bit confusing

--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-event-hook": "^3.1.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-top-loading-bar": "^2.3.1",
     "react-video-pop": "^1.0.3",
+    "simplex-noise": "^4.0.1",
     "three": "^0.159.0",
+    "tone": "^14.7.77",
     "typescript": "^5.2.2",
     "usehooks-ts": "^2.9.1"
   },
