--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "three": "^0.159.0",
     "tone": "^14.7.77",
     "typescript": "^5.2.2",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "zukeeper": "^1.0.2"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.31",
