--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "three": "^0.159.0",
     "tone": "^14.7.77",
     "typescript": "^5.2.2",
+    "use-r3f-assets": "^0.1.1",
     "usehooks-ts": "^2.9.1",
     "zukeeper": "^1.0.2"
   },
