--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@prismicio/client": "^7.3.1",
     "@prismicio/next": "^1.5.0",
     "@prismicio/react": "^2.7.3",
-    "@react-three/drei": "^9.92.1",
-    "@react-three/fiber": "^8.15.12",
+    "@react-three/drei": "^9.93.0",
+    "@react-three/fiber": "^8.15.13",
     "@react-three/rapier": "^1.2.1",
+    "@theatre/core": "0.5",
+    "@theatre/r3f": "0.5",
+    "@theatre/studio": "0.5",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
@@ -48,7 +51,7 @@
     "react-video-pop": "^1.0.3",
     "simple-zustand-devtools": "^1.1.0",
     "simplex-noise": "^4.0.1",
-    "three": "^0.159.0",
+    "three": "^0.160.0",
     "three-stdlib": "^2.28.12",
     "tone": "^14.7.77",
     "typescript": "^5.2.2",
