--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prismicio/react": "^2.7.3",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
+    "@react-three/postprocessing": "^2.15.11",
     "@theatre/core": "^0.7.0",
     "@theatre/r3f": "^0.7.0",
     "@theatre/studio": "^0.7.0",
