--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-top-loading-bar": "^2.3.1",
     "simple-zustand-devtools": "^1.1.0",
     "simplex-noise": "^4.0.1",
+    "smpte-timecode": "^1.3.5",
     "three": "^0.160.0",
     "three-stdlib": "^2.28.12",
     "tone": "^14.7.77",
