--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-top-loading-bar": "^2.3.1",
+    "react-youtube": "^10.1.0",
     "simple-zustand-devtools": "^1.1.0",
     "simplex-noise": "^4.0.1",
     "smpte-timecode": "^1.3.5",
