--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     "checkJs": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "Tone/*": ["./node_modules/tone/build/esm/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
